[package]
name = "wip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lints.rust]
unsafe_code="forbid"
unused="allow"

[dependencies]
futures = "0.3.30"
quoteparser = { path = "../quoteparser" }

[profile.dev]
opt-level = 0
